[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkll"
dynamic = ["version"]
description = "Python library for Apple's PKL."
authors = [
    { name = "Jungwoo Yang", email = "jwyang0213@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "msgpack >= 1.0.8"
]

[tool.setuptools.packages.find]
exclude = ["codegen"]

[tool.setuptools.dynamic]
version = {file = "pkll/VERSION"}

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "tox",
]

[project.urls]
"Homepage" = "https://github.com/jw-y/pkll"
"Bug Reports" = "https://github.com/jw-y/pkll/issues"
"Source" = "https://github.com/jw-y/pkll"

[tool.twine]
repository = "pypi"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
