[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkl-python"
dynamic = ["version"]
description = "Python library for Apple's PKL."
authors = [
    { name = "Jungwoo Yang", email = "jwyang0213@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "msgpack >= 1.0.8"
]

[tool.setuptools.packages.find]
include = ["pkl"]

[tool.setuptools.dynamic]
version = {file = "pkl/VERSION"}

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "tox",
]

[project.urls]
"Homepage" = "https://github.com/jw-y/pkl"
"Bug Reports" = "https://github.com/jw-y/pkl/issues"
"Source" = "https://github.com/jw-y/pkl"

[tool.twine]
repository = "pypi"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
